@startuml

title __JobFit's UML Diagram__\n

set namespaceseparator none

namespace javafx.application {
  class Application {}
}


namespace jobfitpackage {
  abstract class AbstractController {
      + createAlert()
      + getCurrentStage()
      {abstract} + initialize()
      + switchScene()
  }
}

namespace jobfitpackage {
  class EditProfileController {
      - achievementsTextField : TextField
      - degreeTextField : TextField
      - experienceTextField : TextField
      - file : File
      - introductionTextArea : TextArea
      - nameTextField : TextField
      - universityTextField : TextField
      + initialize()
      + loadProfileDetails()
      + setTextFields()
      + updateProfile()
      ~ mainMenuClicked()
      ~ updateProfileClicked()
      - saveProfileToFile()
  }
}

namespace jobfitpackage {
  class Job {
      ~ degree : String
      ~ field : String
      ~ name : String
      ~ salary : String
      ~ workSetup : String
      + Job()
      + getDegree()
      + getField()
      + getName()
      + getSalary()
      + getWorkSetup()
      + setDegree()
      + setField()
      + setName()
      + setSalary()
      + setWorkSetup()
  }
}

namespace jobfitpackage {
  class JobList {
      - jobArrayList : ArrayList<Job>
      + JobList()
      + addJob()
      + getJob()
      + getSize()
      + loadJobs()
      + searchJobByField()
      + searchJobByName()
      - getJobFromLine()
  }
}

namespace jobfitpackage {
  class Main {
      {static} + main()
      + start()
  }
}

namespace jobfitpackage {
  class MainScreenController {
      - degreeField : Text
      - field : String
      - file : File
      - jobNameTextField : TextField
      - jobsVBox : VBox
      - nameField : Text
      - profileButton : Button
      - statisticsImageView : ImageView
      - universityField : Text
      + createJobHBox()
      + createLabel()
      + createNewProfile()
      + displayJobsByField()
      + initialize()
      + loadProfileDetails()
      + setStatisticsImageView()
      + setTextFields()
      ~ allClicked()
      ~ creativesClicked()
      ~ editProfileClicked()
      ~ engineeringClicked()
      ~ financeClicked()
      ~ jobFinderClicked()
      ~ medicalClicked()
      ~ searchClicked()
      ~ signOutClicked()
      ~ technologyClicked()
      - containsAnyKeyword()
      - readIndustryKeywords()
  }
}

namespace jobfitpackage {
  class Profile {
      ~ achievements : String
      ~ degree : String
      ~ email : String
      ~ experience : String
      ~ introduction : String
      ~ name : String
      ~ password : String
      ~ university : String
      ~ username : String
      + Profile()
      + getAchievements()
      + getDegree()
      + getEmail()
      + getExperience()
      + getIntroduction()
      + getName()
      + getPassword()
      + getUniversity()
      + getUsername()
      + setAchievements()
      + setDegree()
      + setExperience()
      + setIntroduction()
      + setName()
      + setUniversity()
  }
}

namespace jobfitpackage {
  class ProfileList {
      {static} - LOGIN_DETAILS_PATH : String
      {static} - instance : ProfileList
      - profileArrayList : ArrayList<Profile>
      + addProfile()
      {static} + getInstance()
      + getProfile()
      + loadLoginDetails()
      + searchProfileEmail()
      + searchProfileUsername()
      - ProfileList()
      - getProfileFromLine()
  }
}

namespace jobfitpackage {
  class SessionManager {
      {static} - currentProfile : Profile
      {static} - primaryStage : Stage
      {static} + getCurrentProfile()
      {static} + getPrimaryStage()
      {static} + setCurrentProfile()
      {static} + setPrimaryStage()
  }
}

namespace jobfitpackage {
  class SignInController {
      - passwordTextField : TextField
      - signupHyperlink : Hyperlink
      - usernameTextField : TextField
      + initialize()
      + switchToMainScreen()
      ~ signInClicked()
      ~ signUpClicked()
  }
}

namespace jobfitpackage {
  class SignUpController {
      - emailTextField : TextField
      - passwordTextField : TextField
      - signinHyperlink : Hyperlink
      - usernameTextField : TextField
      + createAlert()
      + createNewAccount()
      + initialize()
      ~ createAccountClicked()
      ~ signInClicked()
  }
}

EditProfileController -up-|> AbstractController
EditProfileController o-- Profile : profile
Main -up-|> Application
MainScreenController -up-|> AbstractController
MainScreenController o-- JobList : jobList
MainScreenController o-- Profile : profile
SignInController -up-|> AbstractController
SignInController o-- ProfileList : profileList
SignUpController -up-|> AbstractController
SignUpController o-- ProfileList : profileList

@enduml
